<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/b4"
    tools:context="com.example.fastdire.wede_chrch.LoginActivity">


    <EditText
        android:id="@+id/emailet"
        android:layout_width="258dp"
        android:layout_height="49dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:background="#212121"
        android:drawableLeft="@drawable/ic_action_user"
        android:drawableStart="@drawable/ic_action_user"
        android:ems="10"
        android:hint="@string/emaillogintxt"
        android:inputType="textPersonName"
        android:textColor="#ffff"
        android:textColorHint="#ffff"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.618"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.331" />

    <EditText
        android:id="@+id/etPassword"
        android:layout_width="256dp"
        android:layout_height="47dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:background="#212121"
        android:drawableLeft="@drawable/ic_action_lock"
        android:drawableStart="@drawable/ic_action_lock"
        android:ems="10"
        android:hint="@string/passwordtext"
        android:inputType="textPassword"
        android:textColor="#ffff"
        android:textColorHint="#ffff"
        app:layout_constraintBottom_toBottomOf="@+id/tvRegisterhere"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.607"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/emailet"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/bLogin"
        android:layout_width="128dp"
        android:layout_height="40dp"
        android:layout_marginBottom="200dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:background="#212121"
        android:text="@string/loginbtext"
        android:textColor="#ffff"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/tvRegisterhere"
        android:layout_width="123dp"
        android:layout_height="42dp"
        android:layout_marginBottom="148dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/register_heretext"
        android:textColor="@android:color/background_dark"
        android:textSize="19sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bLogin"
        app:layout_constraintVertical_bias="0.0" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="96dp"
        android:layout_height="101dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.078"
        app:srcCompat="@drawable/cross" android:contentDescription="@string/todotxt" />
</android.support.constraint.ConstraintLayout>
